# frogtab

./: .gitignore  CNAME  HACKING.md  LICENSE  README.md  app_fetch_libs.sh  build_server.sh  capture.html  code_samples.md  contact.html  create_release.py  demo-data.json  dev_build_local.sh  dev_build_server.sh  dev_create_release.py  dev_create_release.sh  dev_test_api.py  dev_test_sdk.html  dev_test_server.py  dev_update_libs.sh  dev_update_local.sh  dev_update_sha1.py  help.html  index.html  justfile  local_create_release.sh  new-send.html  sdk.js  send-to-me.html  send-to-user.html  send-to.html  send.html  server_create_staging.sh  server_include_app.sh  server_run_tests.py  server_tests.py  sitemap.xml  style.css  test.html  update_sha1.py  (+2 more)
app/: achievements.html  beta-dark-style.css  beta-dark.html  beta-help.html  beta-send-dark.html  beta-style.css  beta.html  demo-week.html  demo.html  help.html  icon-normal.html  icon-notify.html  index.html  index.php  lib-openpgp.min.mjs  main.js  manifest.webmanifest  openpgp.min.mjs  post-create-user.php  post-remove-messages.php  post-remove-user.php  post-verify-user.php  send.html  simple-customizations.css  sitemap.xml  style.css  test.php  week.html
app/open/: get-user.php  post-add-message.php  post-create-user.php  post-remove-messages.php  post-remove-user.php  sdk.js
development/: test_api.py
development/frogtab.com/: .htaccess  _install.sh  sitemap.xml
extra/: app_update_sha1.py  extra.htaccess  install_frogtab.sh  update_libs.sh
extra/frogtab.com/private/: install.sh
extra/private/: build_changes.py  deploy.sh  requirements.txt
local/: .gitignore  CHANGELOG.md  README.md  app.py  backend.py  build_package.sh  cli.py  cli_old.py  cli_wip.py  client.py  config.ini  config.json  config.py  dev_build_package.sh  dev_build_python.sh  dev_prepare_env.sh  dev_publish_package.sh  dev_publish_python.sh  frogtab.py  frogtab_backend.py  frogtab_flask.py  frogtab_helpers.py  functions.py  lib.py  requirements.txt  send.py  services.py
local/frogctl/: __init__.py  controller.py
local/frogtab/: __init__.py  cli_environment.py  controller.py
local/internal/: config.py  flask_script.py
local/legacy/: frogtab_helpers.py  read_config.py
local/local_server/: helpers.py  run.py
local/package/: README.md  pyproject.toml
local/package/frogtab/: __init__.py  _cli.py  _client.py  _env.py  _exceptions.py  _version.py  cli.py  cli_commands.py  cli_environment.py  client.py  controller.py  errors.py  exceptions.py  version.py  workload.py
local/package/frogtab/exceptions/: __init__.py  _exceptions.py
local/package/frogtab/legacy/: frogtab_helpers.py  migrate_config.py
local/package/frogtab/local_server/: server.py
local/python/: pyproject.toml
local/python/frogtab/: cli_commands.py  version.py
local/snap/: requirements.txt  snapcraft.yaml
local/snapcraft/: frogtab-wrapper  requirements.txt  teardown.py
scripts/: build_server.sh  deploy.sh  test_sdk.html
server/: .gitignore  .htaccess
server/data/: sqlite.db
server/open/: .htaccess  get-user.php  post-add-message.php  post-create-user.php  post-remove-messages.php  post-remove-user.php  post-verify-user.php
server/public/: .htaccess  get-public-key.php
snap/: is_not_running.py  snapcraft.yaml  status.py
(+16 files in other folders)
