[project]
name = "frogtab"
version = "2.0.0a1"
description = "Frogtab Local"
dependencies = [
    "Flask>=2.2.5",
    "requests>=2.31.0",
]
readme = "README.md"
authors = [
    {name="Dave Wilding", email="tech@dpw.me"},
]
license = {text="MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"